Register frontend setup

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,198 +1,188 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-Register
+  Register
 {% endblock %}
 {% block content %}
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="robots" content="all,follow">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
-  <!--  <link rel="stylesheet" href="{% static 'css/sign_in.css' %}">-->
-<!--  <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css">-->
-<!--  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">-->
-</head>
-<body>
-<div class="page login-page">
-  <div class="container d-flex align-items-center">
-    <div class="form-holder has-shadow">
-      <div class="row">
-        <!--logo & information panel-->
-        <div class="col-lg-6">
-          <div class="info d-flex align-items-ceenter">
-            <div class="content">
-              <div class="logo"
-                   style="margin:auto; position:absolute;left:50%;top:50%;margin-left: -150px;margin-top:-100px;">
-                <center>
-                  <h1>Welcome</h1>
-                  <h1>To</h1>
-                  <h1>Diet Master</h1>
-                </center>
+  <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="all,follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
+    <!--  <link rel="stylesheet" href="{% static 'css/sign_in.css' %}">-->
+    <!--  <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css">-->
+    <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">-->
+  </head>
+  <body>
+  <div class="page login-page">
+    <div class="container d-flex align-items-center">
+      <div class="form-holder has-shadow">
+        <div class="row">
+          <!--logo & information panel-->
+          <div class="col-lg-6">
+            <div class="info d-flex align-items-ceenter">
+              <div class="content">
+                <div class="logo"
+                     style="margin:auto; position:absolute;left:50%;top:50%;margin-left: -150px;margin-top:-100px;">
+                  <center>
+                    <h1>Welcome</h1>
+                    <h1>To</h1>
+                    <h1>Diet Master</h1>
+                  </center>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <!--Form Panel-->
-        <div class="col-lg-6 bg-white">
-          <div class="form d-flex align-items-center">
-            <div class="content">
-              <div class="form-group">
-                <input id="register-username" class="input-material" type="text"
-                       name="registerUsername" placeholder="User Name">
-                <div class="invalid-feedback">User Name should be within 2 to 10 characters!</div>
+          <!--Form Panel-->
+          <div class="col-lg-6 bg-white">
+            <div class="form d-flex align-items-center">
+              <div class="content">
+                <form method="post" action="{% url 'register' %}">
+                  {% csrf_token %}
+                  <div class="form-group">
+                    <label for="register-username">User name</label>
+                    <input id="register-username" class="input-material" type="text"
+                           name="registerUsername" placeholder="User Name">
+                    <div class="invalid-feedback">User Name should be within 2 to 10 characters!</div>
+                  </div>
+                  <div class="form-group">
+                    <label for="register-password">
+                      Password
+                    </label>
+                    <input id="register-password" class="input-material" type="password"
+                           name="registerPassword" placeholder="Password">
+                    <div class="invalid-feedback">Password must contain at least 8 characters or can't be entirely
+                      numeric!
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="register-passwords">Type password again</label>
+                    <input id="register-passwords" class="input-material" type="password"
+                           name="registerPasswords" placeholder="Confirm Password">
+                    <div class="invalid-feedback">Two passwords are not the same!</div>
+                  </div>
+                  <div class="form-group">
+                    <label for="register-email">Email</label>
+                    <input id="register-email" class="input-material" type="email"
+                           name="registerEmail" placeholder="Email Address">
+                    <div class="invalid-feedback">The email address is invalid!</div>
+                  </div>
+                  <div class="form-group">
+                    <input id="regbtn" class="btn btn-primary" type="submit" value="Sign up"
+                            name="registerSubmit"/>
+                  </div>
+                  <small>Already registered?</small>
+                  <a href="{% url 'login' %}" class="signup">&nbsp;Login</a>
+                </form>
               </div>
-              <div class="form-group">
-                <input id="register-password" class="input-material" type="password"
-                       name="registerPassword" placeholder="Password">
-                <div class="invalid-feedback">Password must contain at least 8 characters or can't be entirely
-                  numeric!
-                </div>
-              </div>
-              <div class="form-group">
-                <input id="register-passwords" class="input-material" type="password"
-                       name="registerPasswords" placeholder="Confirm Password">
-                <div class="invalid-feedback">Two passwords are not the same!</div>
-              </div>
-              <div class="form-group">
-                <input id="register-email" class="input-material" type="email"
-                       name="registerEmail" placeholder="Email Address">
-                <div class="invalid-feedback">The email address is invalid!</div>
-              </div>
-              <div class="form-group">
-                <button id="regbtn" class="btn btn-primary" type="button"
-                        name="registerSubmit">Sign up
-                </button>
-              </div>
-              <small>Already registered?</small>
-              <a href="{% url 'login' %}" class="signup">&nbsp;Login</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<script src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
-<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/bootstrap.min.js"></script>
-<script>
-  $(function(){
-   /*
-   1. $("#"+id)表示 拥有某个id值的元素
-   2. change()函数用于为每个匹配元素的change事件绑定处理函数。
-      该函数也可用于触发change事件。
-   */
-    /*错误class  form-control is-invalid
-    正确class  form-control is-valid*/
-    var flagName=false;
-    var flagPas=false;
-    var flagPass=false;
-    var flagEmail=false;
-    /*验证用户名*/
-    var name,passWord,passWords,reg,eml;
-    $("#register-username").change(function()
-    {
-      name=$("#register-username").val();
-      if(name.length<2||name.length>10)
-      {
-      $("#register-username").removeClass("form-control is-valid")
-      $("#register-username").addClass("form-control is-invalid");
-      flagName=false;
-      }
-      else
-      {
-        $("#register-username").removeClass("form-control is-invalid")
-        $("#register-username").addClass("form-control is-valid");
-        flagName=true;
-      }
-     })
-  })
-  /*验证密码*/
-  $("#register-password").change(function(){
-    passWord = $("#register-password").val();
-    if(passWord.length<8||passWord.length>18)
-    {
-      $("#register-password").removeClass("form-control is-valid")
-      $("#register-password").addClass("form-control is-invalid");
-      flagPas=false;
-    }
-    else
-    {
-      $("#register-password").removeClass("form-control is-invalid")
-      $("#register-password").addClass("form-control is-valid");
-      flagPas=true;
-    }
-  })
-  /*验证确认密码*/
-  $("#register-passwords").change(function(){
-    passWords = $("#register-passwords").val();
-    if((passWords!=passWord)||(passWords.length<6||passWords.length>18))
-    {
-      $("#register-passwords").removeClass("form-control is-valid")
-      $("#register-passwords").addClass("form-control is-invalid");
-      flagPass=false;
-    }
-    else
-    {
-      $("#register-passwords").removeClass("form-control is-invalid")
-      $("#register-passwords").addClass("form-control is-valid");
-      flagPass=true;
-    }
-  })
-  /*验证邮箱*/
-  reg=/^[A-Za-zd]+([-_.][A-Za-zd]+)*@([A-Za-zd]+[-.])+[A-Za-zd]{2,5}$/;
-  $("#register-email").change(function(){
-    eml = $("#register-email").val();
-    if(reg.test(eml))
-    {
-      $("#register-email").removeClass("form-control is-invalid")
-      $("#register-email").addClass("form-control is-valid");
-      flagEmail=true;
-    }
-    else
-    {
-      $("#register-email").removeClass("form-control is-valid")
-      $("#register-email").addClass("form-control is-invalid");
-      flagEmail=false;
-    }
-  })
- /*按钮*/
-   $("#regbtn").click(function()
-  {
-    if(flagName&&flagPas&&flagPass&&flagEmail)
-    {
-      /*setItem() 作为 Storage 接口的方法，接受一个键名和值作为参数，
-      将会把键名添加到存储中，如果键名已存在，则更新其对应的值。
-      */
-      localStorage.setItem("name",name);
-      localStorage.setItem("passWord",passWord);
-      location="{% url 'login' %}"
-    }
-    else
-    {
-      if(!flagName)
-      {
-    		$("#register-username").addClass("form-control is-invalid");
-    	}
-    	if(!flagPas){
-    		$("#register-password").addClass("form-control is-invalid");
-    	}
-    	if(!flagPass){
-    		$("#register-passwords").addClass("form-control is-invalid");
-    	}
-    	if(!flagEmail){
-    		$("#register-email").addClass("form-control is-invalid");
-    	}
-    }
-  })
- //})这里有问题
+  <script src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/bootstrap.min.js"></script>
+  <script>
+      $(function () {
+          /*
+          1. $("#"+id)表示 拥有某个id值的元素
+          2. change()函数用于为每个匹配元素的change事件绑定处理函数。
+             该函数也可用于触发change事件。
+          */
+          /*错误class  form-control is-invalid
+          正确class  form-control is-valid*/
+          var flagName = false;
+          var flagPas = false;
+          var flagPass = false;
+          var flagEmail = false;
+          /*验证用户名*/
+          var name, passWord, passWords, reg, eml;
+          $("#register-username").change(function () {
+              name = $("#register-username").val();
+              if (name.length < 2 || name.length > 10) {
+                  $("#register-username").removeClass("form-control is-valid")
+                  $("#register-username").addClass("form-control is-invalid");
+                  flagName = false;
+              } else {
+                  $("#register-username").removeClass("form-control is-invalid")
+                  $("#register-username").addClass("form-control is-valid");
+                  flagName = true;
+              }
+          })
+      })
+      /*验证密码*/
+      $("#register-password").change(function () {
+          passWord = $("#register-password").val();
+          if (passWord.length < 8 || passWord.length > 18) {
+              $("#register-password").removeClass("form-control is-valid")
+              $("#register-password").addClass("form-control is-invalid");
+              flagPas = false;
+          } else {
+              $("#register-password").removeClass("form-control is-invalid")
+              $("#register-password").addClass("form-control is-valid");
+              flagPas = true;
+          }
+      })
+      /*验证确认密码*/
+      $("#register-passwords").change(function () {
+          passWords = $("#register-passwords").val();
+          if ((passWords != passWord) || (passWords.length < 6 || passWords.length > 18)) {
+              $("#register-passwords").removeClass("form-control is-valid")
+              $("#register-passwords").addClass("form-control is-invalid");
+              flagPass = false;
+          } else {
+              $("#register-passwords").removeClass("form-control is-invalid")
+              $("#register-passwords").addClass("form-control is-valid");
+              flagPass = true;
+          }
+      })
+      /*验证邮箱*/
+      reg = /^[A-Za-zd]+([-_.][A-Za-zd]+)*@([A-Za-zd]+[-.])+[A-Za-zd]{2,5}$/;
+      $("#register-email").change(function () {
+          eml = $("#register-email").val();
+          if (reg.test(eml)) {
+              $("#register-email").removeClass("form-control is-invalid")
+              $("#register-email").addClass("form-control is-valid");
+              flagEmail = true;
+          } else {
+              $("#register-email").removeClass("form-control is-valid")
+              $("#register-email").addClass("form-control is-invalid");
+              flagEmail = false;
+          }
+      })
+      /*按钮*/
+      $("#regbtn").click(function () {
+          if (flagName && flagPas && flagPass && flagEmail) {
+              /*setItem() 作为 Storage 接口的方法，接受一个键名和值作为参数，
+              将会把键名添加到存储中，如果键名已存在，则更新其对应的值。
+              */
+              localStorage.setItem("name", name);
+              localStorage.setItem("passWord", passWord);
+              location = "{% url 'login' %}"
+          } else {
+              if (!flagName) {
+                  $("#register-username").addClass("form-control is-invalid");
+              }
+              if (!flagPas) {
+                  $("#register-password").addClass("form-control is-invalid");
+              }
+              if (!flagPass) {
+                  $("#register-passwords").addClass("form-control is-invalid");
+              }
+              if (!flagEmail) {
+                  $("#register-email").addClass("form-control is-invalid");
+              }
+          }
+      })
+      //})这里有问题
 
 
-</script>
-</body>
+  </script>
+  </body>
 
-</html>
+  </html>
 {% endblock %}
