--- a/templates/login.html
+++ b/templates/login.html
@@ -43,9 +43,21 @@
             <div class="content">
               <form method="post" action="{% url 'login' %}" class="form-validate" id="loginFrom">
                 {% csrf_token %}
+                {% if error_msg is not None %}
+                  <div class="alert alert-danger alert-dismissible fade show">
+                    <strong>Error!</strong> {{ error_msg }}
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  </div>
+                {% endif %}
+                {% if warning_msg is not None %}
+                  <div class="alert alert-warning  alert-dismissible fade show">
+                    <strong>Warning!</strong> {{ warning_msg }}
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  </div>
+                {% endif %}
                 <div class="form-group">
-                  <label for="login-username">User name</label>
-                  <input id="login-username" type="email" name="email" required data-msg="Please enter username"
+                  <label for="login-username">Username/Email</label>
+                  <input id="login-username" type="text" name="username" required data-msg="Please enter username"
                                                              placeholder="" class="input-material">
                 </div>
                 <div class="form-group" style="margin-bottom:55px">
