--- a/templates/register.html
+++ b/templates/register.html
@@ -42,33 +42,39 @@
               <div class="content">
                 <form method="post" action="{% url 'register' %}">
                   {% csrf_token %}
+                    {% if error_msg is not None %}
+                    <div class="alert alert-danger alert-dismissible fade show">
+                        <strong>Error!</strong> {{ error_msg }}
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    </div>
+                    {% endif %}
                   <div class="form-group">
                     <label for="register-username">User name</label>
                     <input id="register-username" class="input-material" type="text"
                            name="registerUsername" placeholder="User Name">
                     <div class="invalid-feedback">User Name should be within 2 to 10 characters!</div>
                   </div>
+                    <div class="form-group">
+                        <label for="register-email">Email</label>
+                        <input id="register-email" class="input-material" type="email"
+                               name="registerEmail" placeholder="Email Address">
+                        <div class="invalid-feedback">The email address is invalid!</div>
+                    </div>
                   <div class="form-group">
                     <label for="register-password">
                       Password
                     </label>
                     <input id="register-password" class="input-material" type="password"
                            name="registerPassword" placeholder="Password">
-                    <div class="invalid-feedback">Password must contain at least 8 characters or can't be entirely
+                    <div class="invalid-feedback">Password must contain at least 8 characters and can't be entirely
                       numeric!
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="register-passwords">Type password again</label>
+                    <label for="register-passwords">Confirm password</label>
                     <input id="register-passwords" class="input-material" type="password"
                            name="registerPasswords" placeholder="Confirm Password">
                     <div class="invalid-feedback">Two passwords are not the same!</div>
-                  </div>
-                  <div class="form-group">
-                    <label for="register-email">Email</label>
-                    <input id="register-email" class="input-material" type="email"
-                           name="registerEmail" placeholder="Email Address">
-                    <div class="invalid-feedback">The email address is invalid!</div>
                   </div>
                   <div class="form-group">
                     <input id="regbtn" class="btn btn-primary" type="submit" value="Sign up"
