--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -1,10 +1,12 @@
 {% extends './base.html' %}
 {% load static %}
-
+{% block title %}
+  Profile
+{% endblock %}
 {% block content%}
 
-<div class="container">
-    <div class="row jumbotron p-4 p-md-5 text-white rounded bg-dark">
+<div class="container" >
+    <div class="row jumbotron p-4 p-md-5 text-white rounded bg-dark" style="margin-left:2px;margin-right:1px">
         <div class="col-md-4 px-0">
             <img class="user_image" src="{% static '/img/user1.jpg' %}" alt="Card image cap"/>
         </div>
@@ -44,7 +46,7 @@
         </div>
     </div>
 
-    <div class="row mb-2">
+    <div class="row mb-2" >
         <div class="col-md-12">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
