--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
 <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading">Diet Master </div>
+<!--    <div class="sidebar-heading">Diet Master </div>-->
     <div class="list-group list-group-flush">
         <a href="{% url 'recommendation' %}" class="list-group-item list-group-item-action bg-light">Food</a>
         <a href="{% url 'profile' %}" class="list-group-item list-group-item-action bg-light">Profile</a>
