--- a/templates/register.html
+++ b/templates/register.html
@@ -51,13 +51,13 @@
                   <div class="form-group">
                     <label for="register-username">User name</label>
                     <input id="register-username" class="input-material" type="text"
-                           name="registerUsername" placeholder="User Name">
+                           name="registerUsername" placeholder="">
                     <div class="invalid-feedback">User Name should be within 2 to 10 characters!</div>
                   </div>
                     <div class="form-group">
                         <label for="register-email">Email</label>
                         <input id="register-email" class="input-material" type="email"
-                               name="registerEmail" placeholder="Email Address">
+                               name="registerEmail" placeholder="">
                         <div class="invalid-feedback">The email address is invalid!</div>
                     </div>
                   <div class="form-group">
@@ -65,7 +65,7 @@
                       Password
                     </label>
                     <input id="register-password" class="input-material" type="password"
-                           name="registerPassword" placeholder="Password">
+                           name="registerPassword" placeholder="">
                     <div class="invalid-feedback">Password must contain at least 8 characters and can't be entirely
                       numeric!
                     </div>
@@ -73,7 +73,7 @@
                   <div class="form-group">
                     <label for="register-passwords">Confirm password</label>
                     <input id="register-passwords" class="input-material" type="password"
-                           name="registerPasswords" placeholder="Confirm Password">
+                           name="registerPasswords" placeholder="">
                     <div class="invalid-feedback">Two passwords are not the same!</div>
                   </div>
                   <div class="form-group">
