--- a/templates/dashboard/edit_profile.html
+++ b/templates/dashboard/edit_profile.html
@@ -7,104 +7,12 @@
     <div class="row my-2">
 
       {#      <div class="row">#}
-      <div class="col-md-12">
-        <h2>Profile</h2>
-        <hr>
-        <div class="row">
-          <div class="col-lg-8 text-center">
-            <img src="{% static 'img/user1.JPG' %}" class="mx-auto img-fluid img-circle d-block" alt="avatar">
-            <form method="post" action="{% url 'edit_profile' %}">
-              <div class="form-group">
-                <div class="input-group mb-3">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-                  </div>
-                  <div class="custom-file">
-                    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                    <input type="file" class="custom-file-input" id="inputGroupFile01"
-                           aria-describedby="inputGroupFileAddon01">
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
+      {% include './edit_profile_views/change_avatars.html' %}
 
-      <div class="mt-2 col-lg-12">
-        <h2>Emails</h2>
-        <hr>
-        {#          email lists#}
-        {% for email in email_list %}
-          <div class="card">
-            <div class="card-body">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-6">
-                    <p class="font-weight-bold">{{ email.mail }}</p>
-                  </div>
-                  <div class="col-6">
-                    <p class="text-right"><i class="fa fa-trash" style="color: #cb2431"></i></p>
-                  </div>
-                </div>
-                <ul>
-                  {% if email.verified %}
-                    <li>Verified {#<span class="fa fa-info-circle"></span>#}</li>
-                    <li>Used for recovering account</li>
-                    <li>Receives notifications</li>
-                  {% else %}
-                    <li><span class="text-bold" style="color: #b08800">Unverified</span></li>
-                  {% endif %}
-                </ul>
-              </div>
-            </div>
-          </div>
-        {% endfor %}
+      {% include './edit_profile_views/change_email.html' %}
 
-        <div class="mt-2 row">
-          <div class="col-md-8">
-            <form method="post" action="{% url 'edit_profile' %}">
-              <h5 class="my-3">Add email address</h5>
-              <div class="form-group input-group">
-                <input id="add-email" type="text" class="form-control" placeholder="Email address"
-                       aria-label="Add email address" aria-describedby="button-addon4">
-                <div class="input-group-append" id="button-addon4">
-                  <button class="btn btn-outline-secondary" type="submit">Add</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
+      {% include './edit_profile_views/change_passwords.html' %}
 
-        <h2 class="mt-2">Change Passwords</h2>
-        <hr class="mb-4">
-        <div class="row">
-
-          <div class="col-md-8">
-            <form method="post" action="{% url 'edit_profile' %}">
-              <div class="form-group">
-                <label for="oldPassword">Old Password</label>
-                <input type="password" class="form-control" id="oldPassword">
-              </div>
-              <div class="form-group">
-                <label for="password1">New Password</label>
-                <input type="password" class="form-control" id="password1">
-              </div>
-              <div class="form-group">
-                <label for="password2">Confirm New Password</label>
-                <input type="password" class="form-control" id="password2">
-              </div>
-              <div class="form-group">
-                <small id="passwordHelp" class="form-text text-muted">
-                  Make sure it's at least 8 characters AND and can't be entirely numeric.
-                </small>
-                <button type="submit" class="btn btn-secondary" style="padding: 10px">Update password</button>
-                <a href="#">I forgot my password.</a>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
 
     </div>
 
