--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-light bg-dark ">
   <a class="navbar-brand mb-0 h1" style="color:#FFFFFF; padding-left:10px;">Diet Master</a>
 
-  <nav class="nav nav-masthead justify-content-center">
+  <nav class="nav nav-masthead justify-content-center" style="margin-right:10px;">
     <a class="nav-link active" href="{% url 'home' %}" style="color:#FFFFFF">Home</a>
     {% if request.user.is_authenticated %}
       <a class="nav-link" href="{% url 'logout' %}" style="color:#FFFFFF;">Logout</a>
@@ -12,6 +12,6 @@
       <a class="nav-link btn bg-primary " href="{% url 'register' %}" style="color:#fff;margin-right:8px;">Register</a>
     {% endif %}
 {#    <a class="nav-link" href="" style="color:#FFFFFF;">Logout</a>#}
-{#    <a class="nav-link avatar avatar-32 rounded-circle bg-secondary img-fluid" href="{% url 'recommendation' %}">B</a>#}
+{#    <a class="nav-link avatar avatar-32 rounded-circle bg-secondary img-fluid" href="{% url 'recommendation' %}" style="">B</a>#}
   </nav>
 </nav>
