bugs in forms.py

--- a/templates/dashboard/edit_profile_views/change_passwords.html
+++ b/templates/dashboard/edit_profile_views/change_passwords.html
@@ -16,32 +16,9 @@
     </div>
   {% endif %}
   <div class="row">
-    {#    <div class="col-md-8">#}
-    {#      <form method="post" action="{% url 'edit_profile' %}">#}
-    {#        <div class="form-group">#}
-    {#          <label for="oldPassword">Old Password</label>#}
-    {#          <input type="password" class="form-control" id="oldPassword">#}
-    {#        </div>#}
-    {#        <div class="form-group">#}
-    {#          <label for="password1">New Password</label>#}
-    {#          <input type="password" class="form-control" id="password1">#}
-    {#        </div>#}
-    {#        <div class="form-group">#}
-    {#          <label for="password2">Confirm New Password</label>#}
-    {#          <input type="password" class="form-control" id="password2">#}
-    {#        </div>#}
-    {#        <div class="form-group">#}
-    {#          <small id="passwordHelp" class="form-text text-muted">#}
-    {#            Make sure it's at least 8 characters AND and can't be entirely numeric.#}
-    {#          </small>#}
-    {#          <button type="submit" class="btn btn-secondary" style="padding: 10px">Update password</button>#}
-    {#          <a href="#">I forgot my password.</a>#}
-    {#        </div>#}
-    {#      </form>#}
-    {#    </div>#}
-    {#    {{ form.as_p }}#}
+
     <div class="col-md-8">
-      <form method="post">
+      <form method="post" action="{% url 'change_password' %}">
         {% csrf_token %}
         {% for field in change_password_form %}
           <div class="form-group">
