combine the css and add some comments.However, haven't revised too much empty. I think we can leave it, it might not be a very serious problem

--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -14,11 +14,11 @@
             <div class="row">
                 <h1 class="display-4 font-italic">Hello, {{ request.user | capfirst }}</h1>
                 <div class="col-md-6 px-0">
-                    <p class="lead my-3 font-weight-bold">Your Current Weight: </p>
+                    <p class="lead my-3 font-weight-bold">Current Weight: </p>
                     <p class="lead my-3">75 kg</p>
                 </div>
                 <div class="col-md-6 px-0">
-                    <p class="lead my-3 font-weight-bold">Your Goal Weight: </p>
+                    <p class="lead my-3 font-weight-bold">Goal Weight: </p>
                     <p class="lead my-3">70 kg</p>
                 </div>
                 <div class="col-md-6 px-0">
