--- a/templates/dashboard/survey.html
+++ b/templates/dashboard/survey.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %}
-
+{% load static %}
 {% block content%}
-
+<link rel="stylesheet" href="{% static 'css/front.css' %}" id="theme-stylesheet">
 <div class="container">
 
   <div class="py-5 text-center">
