--- a/templates/logout.html
+++ b/templates/logout.html
@@ -12,7 +12,7 @@ Logout
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="robots" content="all,follow">
   <!--  <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css">-->
-  <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
+  <link rel="stylesheet" href="{% static 'css/front.css' %}" id="theme-stylesheet">
   <!--<link rel="stylesheet" href="{% static 'css/sign_in.css' %}">-->
 </head>
 <body>
