--- a/templates/register.html
+++ b/templates/register.html
@@ -11,10 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="all,follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
-    <!--  <link rel="stylesheet" href="{% static 'css/sign_in.css' %}">-->
-    <!--  <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css">-->
-    <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">-->
+    <link rel="stylesheet" href="{% static 'css/front.css' %}" id="theme-stylesheet">
+
   </head>
   <body>
   <div class="page login-page">
