--- a/static/css/front.css
+++ b/static/css/front.css
@@ -3495,3 +3495,162 @@ a > code {
   padding-bottom: 0.375rem;
   font-size: 125%;
 }
+
+/*
+-------------Home-------------------
+*/
+.home_subtitle {
+	margin-top:20px;
+}
+/*.start_button {*/
+/*	color:#fff;*/
+/*	vertical-align:middle;*/
+/*	border-color:#007bff;*/
+/*	border-radius:5px;*/
+/*	background-color:#007bff;*/
+/*	text-align:center;*/
+/*	width:300px;*/
+/*	height:48px;*/
+/*}*/
+.cover-container {
+	width: 100%;
+	max-width: 42em;
+	padding: 15px;
+	margin: auto;
+}
+/*
+ * Cover
+ */
+.cover {
+	padding: 0 1.5rem;
+}
+.cover .btn-lg {
+	padding: .75rem 1.25rem;
+	font-weight: 700;
+}
+
+/*
+---------------recommend------------------
+*/
+
+button.like{
+    width: 30px;
+    height: 30px;
+    margin: 0 auto;
+    line-heigth: 50px;
+    border-radius: 50%;
+    border: none;
+    color: #1abc9c;
+    background-color: transparent;
+    font-size: 20px;
+}
+
+button.like:hover {
+    font-size: 25px;
+}
+
+button.dislike{
+    width: 30px;
+    height: 30px;
+    margin: 0 auto;
+    line-heigth: 50px;
+    border-radius: 100%;
+    border: none;
+    color: #e74c3c;
+    background-color: transparent;
+    font-size: 20px;
+}
+
+button.dislike:hover {
+    font-size: 25px;
+}
+
+button.very-like {
+    width: 30px;
+    height: 30px;
+    margin: 0 auto;
+    line-heigth: 50px;
+    border-radius: 100%;
+    border: none;
+    color: #ffa000;
+    background-color: transparent;
+    font-size: 20px;
+}
+
+button.very-like:hover {
+    font-size: 25px;
+}
+
+/* ensure equal card height inside carousel */
+.carousel-inner>.row-equal.active,
+.carousel-inner>.row-equal.next,
+.carousel-inner>.row-equal.prev {
+    display: flex;
+}
+
+/* prevent flicker during transition */
+.carousel-inner>.row-equal.active.left,
+.carousel-inner>.row-equal.active.right {
+    opacity: 0.5;
+    display: flex;
+}
+
+/*
+----------style-----------
+*/
+/*body {
+    overflow-x: hidden;
+}
+*/
+/*sidebar左边栏*/
+#sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -15rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+}
+
+#sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+}
+
+#sidebar-wrapper .list-group {
+    width: 15rem;
+}
+
+/*#page-content-wrapper {*/
+/*    min-width: 100vw;*/
+/*}*/
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+
+    /*#page-content-wrapper {*/
+    /*    min-width: 0;*/
+    /*    width: 100%;*/
+    /*}*/
+
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
+}
+
+.container {
+  max-width: 960px;
+}
+
+.lh-condensed { line-height: 1.25; }
+
+.user_image{
+height:100%;
+width:100%;
+}
