--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!--  <link rel="stylesheet" href="{% static 'css/sign_in.css' %}">-->
-  <link rel="stylesheet" href="{% static 'css/home.css' %}">
-  <link rel="stylesheet" href="{% static 'css/style.default.css' %}">
+<!--  <link rel="stylesheet" href="{% static 'css/home.css' %}">-->
+  <link rel="stylesheet" href="{% static 'css/front.css' %}">
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
