--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -11,9 +11,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" >
-    <link rel="stylesheet" href="{% static 'css/recommend.style.css' %}" >
-    <link rel="stylesheet" href="{% static 'css/style.default.css' %}">
+<!--    <link rel="stylesheet" href="{% static 'css/style.css' %}" >-->
+<!--    <link rel="stylesheet" href="{% static 'css/recommend.style.css' %}" >-->
+    <link rel="stylesheet" href="{% static 'css/front.css' %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
