--- a/templates/dashboard/recommend.html
+++ b/templates/dashboard/recommend.html
@@ -1,28 +1,30 @@
 {% extends './base.html' %}
+{% load static %}
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/front.css' %}" id="theme-stylesheet">
+<!--这里是推荐页面的食物图片-->
+<section class="container pt-3">
 
-  <section class="container pt-3">
+  <div class="row">
+    <h1 class="mb-3 col-lg-12" style="color: darkblue">Guess you like</h1>
+  </div>
 
-    <div class="row">
-      <h1 class="mb-3 col-lg-12" style="color: darkblue">Guess you like</h1>
-    </div>
+  <div id="carouselFoods" class="carousel slide" data-ride="carousel">
 
-    <div id="carouselFoods" class="carousel slide" data-ride="carousel">
+    <! –– start carousel-inner ––>
+    <div class="container pt-0 mt-0 carousel-inner">
+      {% for card_sub_list in card_list %}
 
-      <! –– start carousel-inner ––>
-      <div class="container pt-0 mt-0 carousel-inner">
-        {% for card_sub_list in card_list %}
-
-          <! –– start carousel-item ––>
-          {% if forloop.first %}
-            <div class="row row-equal carousel-item active mt-0">
-          {% else %}
-            <div class="carousel-item">
+      <! –– start carousel-item ––>
+      {% if forloop.first %}
+      <div class="row row-equal carousel-item active mt-0">
+        {% else %}
+        <div class="carousel-item">
           {% endif %}
-        <div class="card-deck">
+          <div class="card-deck">
 
-          <! –– start card ––>
-          {% for card in card_sub_list %}
+            <! –– start card ––>
+            {% for card in card_sub_list %}
             <div class="col-md-4">
               <div class="card shadow">
                 <img class="card-img-top" src="{{ card.img_url }}"
@@ -44,35 +46,35 @@
                 </div>
               </div>
             </div>
-          {% endfor %}
-          <! –– end card ––>
-        </div>
-        </div>
-          <! –– end carousel-item ––>
-
-        {% endfor %}
-        </div>
-        <! –– end carousel-inner ––>
-
-        <! –– carousel control ––>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-right mb-4">
-              <a class="btn btn-outline-secondary prev" href="#carouselFoods" title="go back"><i
-                class="fa fa-lg fa-chevron-left"></i></a>
-              <a class="btn btn-outline-secondary next" href="#carouselFoods" title="more"><i
-                class="fa fa-lg fa-chevron-right"></i></a>
-            </div>
+            {% endfor %}
+            <! –– end card ––>
           </div>
         </div>
+        <! –– end carousel-item ––>
 
-        <! –– end carousel control ––>
-
+        {% endfor %}
       </div>
-    </div>
-  </section>
+      <! –– end carousel-inner ––>
 
-  <script>
+      <! –– carousel control ––>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-right mb-4">
+            <a class="btn btn-outline-secondary prev" href="#carouselFoods" title="go back"><i
+              class="fa fa-lg fa-chevron-left"></i></a>
+            <a class="btn btn-outline-secondary next" href="#carouselFoods" title="more"><i
+              class="fa fa-lg fa-chevron-right"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <! –– end carousel control ––>
+
+    </div>
+  </div>
+</section>
+
+<script>
       // 需要优化
       function switchVeryLike(elem) {
           const elementClassName = elem.className;
@@ -98,6 +100,7 @@
               elem.className = "fa fa-thumbs-o-down";
       }
 
-  </script>
+
+</script>
 
 {% endblock %}
